Resolvido mesma correção no bloco/section parallax

--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
       <!--------------------------------------------- Bloco Parallax --------------------------------------------->
 
       <section class="bl-parallax rl-space" style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url(/assets/images/img3.webp);">
+    url(assets/images/img3.webp);">
         <div class="container">
           <h2 class="title">Motivos para visitar Nova Zelândia</h2>
           <div class="bl-parallax__content">
